fix Alberto's problems
